# capsule-transfer

./: .env.example  .gitignore  README.md  capsule-transfer.spec  flask-backend.spec  main.py  update-config.json  version.json
.github/workflows/: build-windows.yml
data-pipeline/: common.py
data-pipeline/exporters/: reaper_bridge_client.py  reaper_webui_export.py
data-pipeline/lua_scripts/: auto_export_from_config.lua  auto_export_from_config_windows.lua  capsule_bridge.lua  diagnostic_logger.lua  install_capsule_bridge.lua  main_export2.lua  main_export2_windows.lua
data-pipeline/scripts/: render_background_mac.swift  render_background_windows.vbs
docs/: diagnostic-logging-plan.md  isolated-render-worker-plan.md
scripts/: start_server.sh  start_webapp.sh
server/: app.py  bundle.py  config.json  db.py  net.py  reaper_bridge_routes.py  requirements.txt  schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tools/capsule-updater/: Cargo.toml
tools/capsule-updater/src/: main.rs
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: App.jsx  api.js  index.css  tauri-bridge.js
webapp/src/components/: NavIcon.jsx  Toast.jsx
