[package]
name = "capsule-transfer"
version = "0.7.0"
description = "Sound Capsule LAN Transfer"
authors = ["signorzhao"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
